sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:3: error: missing arguments for method by in class Range;
follow this method with `_' if you want to treat it as a partially applied function
	for(i <- 0 to getNombreValeurs()-2 by ){
                                           ^